--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -98,7 +98,7 @@
 	\begin{notation}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(T\) un compacte de \(\mathbb{R}^{n}\). Aleshores denotarem per \(\mathcal{C}_{b}(X,T)\) l'espai mètric de amb la distància entre funcions \(d\).
 		
-		Observem que això té sentit pel lemma \myref{thm:l'espai de funcions contínues i acotades és un espai mètric}.
+		Observem que això té sentit pel lema \myref{thm:l'espai de funcions contínues i acotades és un espai mètric}.
 	\end{notation}
 	\begin{theorem}
 		\label{thm:l'espai de funcions contínues i acotades és complet}
@@ -324,7 +324,7 @@
 		Aleshores direm que \(H\) és equicontínua en \(x\). Si \(H\) és equicontínua en \(x\) per a tot \(x\) de \(X\) direm que \(H\) és equicontínua en \(X\).
 	\end{definition}
 	\begin{lemma}[Teorema de Arzelà-Ascoli]
-		\labelname{Teorema de Arzelà-Ascoli}\label{thm:Teorema de Arzelà-Ascoli}\label{lemma:Teorema de Peano}
+		\labelname{Teorema de Arzelà-Ascoli}\label{thm:Teorema de Arzelà-Ascoli}\label{lema:Teorema de Peano}
 		Siguin \(X\) un compacte i \(\{f_{n}\}_{n\in\mathbb{N}}\) una successió de funcions de \(\mathcal{C}_{b}(X,T)\) equicontínua i puntualment acotada. Aleshores la successió \(\{f_{n}\}_{n\in\mathbb{N}}\) té una parcial acotada.
 		\begin{proof}
 			Prenem un real \(\varepsilon>0\). Per la definició de \myref{def:família de funcions equicontínua} tenim que per a tot punt \(x\) de \(X\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) tenim, per a tot \(n\) natural, que
@@ -497,7 +497,7 @@
 			%TODO
 		\end{proof}
 	\end{theorem}
-	
+	\section{Dependència de les solucions d'un problema de Cauchy}
 	
 	
 	\begin{comment}
