--- a/Apunts.tex
+++ b/Apunts.tex
@@ -7,7 +7,7 @@
 \usepackage{subfiles}
 \usepackage{mathtools,amssymb,amsthm}
 \usepackage{microtype}
-\usepackage[framemethod=TikZ]{mdframed}
+%\usepackage[framemethod=TikZ]{mdframed}
 \usepackage{graphicx}
 \usepackage[sorting=none, backend=biber, refsection=part]{biblatex}
 \usepackage{wasysym}
@@ -34,29 +34,29 @@
 \pagestyle{ruled}
 \setlength{\headheight}{12.1638pt}
 
-\newenvironment{history}[1][]{%
-	\mdfsetup{%
-		frametitle={%
-			\tikz[baseline=(current bounding box.east),outer sep=0pt]
-			\node[anchor=east,rectangle,fill=blue!20]
-			{\strut Coneix els teus herois:~#1};}%
-	}%
-% Both conditions
-\mdfsetup{%
-	innertopmargin=10pt,linecolor=blue!20,%
-	linewidth=2pt,topline=true,%
-	frametitleaboveskip=\dimexpr-\ht\strutbox\relax%
-}
-	% Code for box design goes here.
-	
-	\begin{mdframed}[]\relax}{%
-	\end{mdframed}}
+%\newenvironment{history}[1][]{%
+%	\mdfsetup{%
+%		frametitle={%
+%			\tikz[baseline=(current bounding box.east),outer sep=0pt]
+%			\node[anchor=east,rectangle,fill=blue!20]
+%			{\strut Coneix els teus herois:~#1};}%
+%	}%
+%% Both conditions
+%\mdfsetup{%
+%	innertopmargin=10pt,linecolor=blue!20,%
+%	linewidth=2pt,topline=true,%
+%	frametitleaboveskip=\dimexpr-\ht\strutbox\relax%
+%}
+%	% Code for box design goes here.
+%	
+%	\begin{mdframed}[]\relax}{%
+%	\end{mdframed}}
 
 \hypersetup{
 	colorlinks=true,
 	linkcolor=[rgb]{0,0,0.5},
 	urlcolor=red,
-	pdftitle={Apunts UAB},
+	pdftitle={Apunts del grau de matemàtiques UAB},
 	pdfauthor={Claudi Lleyda Moltó},
 }
 
@@ -83,7 +83,7 @@
 \graphicspath{{imatges/}{../imatges/}}
 
 \newenvironment{solution}
-	{\renewcommand\qedsymbol{\(\lozenge\)}
+	{\renewcommand\qedsymbol{\ensuremath{\lozenge}}
 		\renewcommand{\proofname}{Solució}
 		\begin{proof}}
 	{\end{proof}}
@@ -212,6 +212,8 @@
 \newcommand{\labelname}[1]{
 	\def\@currentlabelname{#1}}
 \makeatother
+
+\def\pgfsys@svg@newline{^^J}
 
 \begin{document}
 	{\hypersetup{urlcolor=black,linkcolor=black}
